# tango-icon-theme

./: CMakeLists.txt  README.md  conanfile.py  tango-icon-schemeW32.cpp  tango-icon-theme.qrc  tango.qrc
